Set min-width to avoid shinking the navigation if text is too long

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -283,5 +283,5 @@ img.engage-icon {
     text-align: center;
 }
 .unit-navi {
-    width: 25em;
+    min-width: 25em;
 }
